2007-11-07  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.3	(SLED10-SP1, RC1 build)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+ooo-build-2.3.0.4.3
+
+    + bug fixes:
+	+ .fxxx suffixes for the Flat XML file formats by default again (Petr)
+	+ start java auto-detection when the older JRE is removed (Petr)
+	+ open files from read-only SMB share (Kendy)
+	+ crash with CMYK JPEGs (Petr)
+	+ lots CWS backports (Petr, Tor)
+    + VBA stuff:
+	+ static keywork for functions and subroutines is not supported (Noel)
+	+ erroneous use of getCurrentDocument (Noel)
+	+ crash in TreeControl (Noel)
+    + Win32 bits:
+	+ registry items for .fxxx suffixes (Tor)
+	+ more fixes in tiff import filter (Tor)
+    + build bits:
+	+ correct packaging of GNOME and KDE integration (Petr)
+	+ SVG Import moved to the experimental section (Petr)
+
 ooo-build-2.3.0.4.2
 
     + bug fixes:
