2007-11-07  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.4	(SLED10-SP1, RC2 build)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+ooo-build-2.3.0.4.4
+
+    + bug fixes:
+	+ edit fields text displaying (Radek)
+    + Win32 bits:
+	+ some patchability fixes (Tor)
+
 ooo-build-2.3.0.4.3
 
     + bug fixes:
