2007-11-27  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.5

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+ooo-build-2.3.0.4.5
+
+    + VBA bits:
+	+ dialog import failure (Noel)
+	+ saving embedded word document objects containing macros (Noel)
+    + Win32 bits:
+	+ temporary disable OOXML (Tor)
+	+ temporary disable configmgr speedup changes (Tor)
+	+ multiple language installer fixes (Tor)
+    + build bits:
+	+ add support for hotfixes (Petr)
+
 ooo-build-2.3.0.4.4
 
     + bug fixes:
