2007-11-21  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.1

* default tag oog680-m9

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+ooo-build-2.3.1:
+
+    + features:
+	+ target oog680-m9 (Rene)
+    + fixes:
+	+ oosplash argument handling (Kendy)
+	+ Spanish translation of Y Axis (Rene)
+    + Win32 bits:
+	+ DirectX canvas building (Tor)
+	+ hsqldb building (Tor)
+	+ four-level version and patch-level handling (Tor)
+    + updated Debian bits (Rene)
+
 ooo-build-2.3.0.7
 
     + bug fixes:
