--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+ooo-build-2.3.1.1:
+
+    + features:
+	+ disabled too incomplete SVG Import (Rene)
+    + fixes:
+	+ oosplash and relative paths and non-UTF-8 locales (Jan)
+	+ crash on =erf(0.65)  (Kohei)
+	+ string hashing table fix (Michael)
+    + build bits:
+	+ support gcj-4.2.1 and gcj-4.2.2 (Miklos)
+	+ easier way to add hotfixes (Petr)
+	+ clean up (Rene)
+
 ooo-build-2.3.1:
 
     + features:
