Enable sd-default-format-n285959.
* Version 2.3.0.4.6

* patches/src680/apply: enable sd-default-format-n285959.diff to apply

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+ooo-build-2.3.0.4.6
+
+    + features:
+	+ EMF+ import; disabled by default (Radek)
+    + VBA bits:
+	+ Application.Goto macro that includes _scroll:=True (Noel)
+    + bug fixes:
+	+ default formatting in PPT export (Hubert)
+	+ string-hash implementation fix (Michael)
+
 ooo-build-2.3.0.4.5
 
     + VBA bits:
