2008-01-17  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.7

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+ooo-build-2.3.0.4.7
+
+    + bug fixes:
+	+ missing hints for user-defined input boxes (Florian, Tor)
+	+ import sheet names properly from Lotus 1-2-3 document (Kohei)
+    + VBA bits:
+	+ better support for Application.Caller macro (Noel)
+    + Win32:
+	+ allow to associate OOXML document with OOo even when they are not
+	  supported (Tor)
+
 ooo-build-2.3.0.4.6
 
     + features:
