2008-02-08  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.8

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+ooo-build-2.3.0.4.8
+
+    + bug fixes:
+	+ find command in Impress crasher (Radek)
+	+ Excel document import crasher (Tor)
+	+ pivot charts import (Kohei)
+    + VBA stuff:
+        + Application.CommandBars API (Jiao, Noel)
+	+ Application.Assistant  API (Jiao, Noel)
+	+ DateSerial behavior in VBA mode (Fong, Noel)
+	+ DateValue return value (Fong, Noel)
+    + Win32 bits:
+	+ Enter key behavior in Calc (Tor)
+
 ooo-build-2.3.0.4.7
 
     + bug fixes:
