2008-02-18  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.9

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+ooo-build-2.3.0.4.9
+
+    + security bugs:
+    	+ possibility to run arbitrary code using hsqldb, CVE-2007-4575 (Petr)
+    + bug fixes:
+    	+ conversion of date string in localized Word documents (Fridrich)
+	+ map ETXTBSY errno to locking violation, necessary for CIFS (Kendy)
+	+ SUMIF's 3rd parameter handling to be compatible with MS Excel (Kohei)
+	+ dynamically resize filtered range when new data rows appear (Kohei)
+    + VBA stuff:
+    	+ simple VBA objects storing in Word documents (Noel)
+	+ Application.Goto macro fixes (Noel)
+
 ooo-build-2.3.0.4.8
 
     + bug fixes:
