2008-02-21  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.4.10

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-2.3.0.4.10
+
+    + bug fixes:
+	+ serve webdav https:// requests in the webdav UCP (Kendy)
+
 ooo-build-2.3.0.4.9
 
     + security bugs:
