2008-02-25  Petr Mladek  <pmladek@suse.cz>
* Version 2.3.0.1.5

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+ooo-build-2.3.0.1.5
+
+    + fixes:
+	+ reverted few changes in the scsolver stuff to avoid adding new
+	  strings (Kohei)
+
 ooo-build-2.3.0.1.4
 
     + fixes:
