2008-03-20  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.3.1	(SLED10-SP1 maintenance update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+ooo-build-2.4.0.3.1
+
+	+ bug fixes:
+	    + wrong result of interactive functions, e.g MIN [n#372255] (Kohei)
+	    + left-mouse click and protected cell crasher [n#371204] (Kohei)
+	    + disable not enough tested "paste on Enter" stuff [n#372446] (Petr)
+	    + disable not enough tested localized arg separator stuff [n#358558] (Kohei)
+	    + disable non-helpful fix for nested positioned tables [n#355286] (Fridrich)
+	    + man page update (Petr)
+	+ build bits:
+	    + OOX build dependency (Petr)
+
 ooo-build-2.4.0.3
 
 	+ features:
