Really apply sc-fix-value-iterator.
* Version 2.4.0.3.2	(SLED10-SP1 maintenance update)

* patches/src680/apply: really apply sc-fix-value-iterator.diff,
n#372255

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-2.4.0.3.2
+
+	+ bug fixes:
+	    + really fix wrong result of interactive functions, e.g MIN [n#372255] (Kohei)
+
 ooo-build-2.4.0.3.1
 
 	+ bug fixes:
