2008-03-21  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.3.3	(SLED10-SP1 maintenance update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+ooo-build-2.4.0.3.3
+
+	+ Win32 bits:
+	    + store the templates also in the %WINDIR%\ShellNew folder (Tor)
+	    + disable problematic IDEA algorithm in the internal openssl (Petr)
+	    + language selection logic in the installer (Tor)
+	+ build bits:
+	    + build with system openssl on Linux (Petr)
+
 ooo-build-2.4.0.3.2
 
 	+ bug fixes:
