2008-03-28  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.3.4	(SLED10-SP1 maintenance update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+ooo-build-2.4.0.3.4
+
+	+ bug fixes:
+	    + OpenGL transitions crashes (Radek)
+	+ Win32 bits:
+	    + fix the multi-lingual installer installer stuff (Tor)
+
 ooo-build-2.4.0.3.3
 
 	+ Win32 bits:
