--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-2.4.0.3.5
+
+	+ bug fixes:
+	    + disable problematic measurement unit stuff (Petr)
+
 ooo-build-2.4.0.3.4
 
 	+ bug fixes:
