2008-04-10  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.3.6	(SLED10-SP1 maintenance update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+ooo-build-2.4.0.3.6
+
+	+ bug fixes:
+	    + random speelcheck dialog behavior (Michael)
+	    + one more fix for the openGL transitions on ATI (Radek)
+	    + do not show Arabic/Hindi numbers instead of decimal numbers (Petr)
+	+ Win32 bits:
+	    + better fix of the multi-lingual installer installer stuff (Tor)
+
 ooo-build-2.4.0.3.5
 
 	+ bug fixes:
