2008-04-17  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.6.1	(SLED10-SP2-rc3)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+ooo-build-2.4.0.6.1
+
+    + bug fixes:
+	+ OpenGL stuff with ATI regression [Radek]
+	+ random spellcheck dialog behavior (bnc#377345, i#88120) [Michael]
+	+ Arabic/Hindi numbers instead of decimal numbers (i#86811) [Petr]
+	+ crasher when attempt to save read-only document (i#5226) [Kohei]
+	+ disabled menu items in quickstarter by mistake (i#88382) [Michael]
+    + VBA bits:
+	+ regression with Range.AutoOutline [Noel]
+	+ crasher when opening dialogs (bnc#379844) [Noel]
+	+ Application.Goto returns BASIC runtime error '1' (bnc#309981) [Noel]
+    + build bits:
+	+ allow to use autoreconf [Petr]
+	+ new configure option --with-additional-sections [Petr]
+
 ooo-build-2.4.0.6
 
 	+ features:
