2008-04-24  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.8	(openSUSE-11.0-beta2)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+ooo-build-2.4.0.8
+
+    + bug fixes:
+	+ "Animate attached Shape" checkbox (bnc#380036, i#69364) [Thorsten]
+	+ FREQUENCY function regression (i#88477) [Kohei]
+	+ datapilot drill-down regressions (i#83250, i#88473) [Kohei]
+    + Win32 bits:
+	+ localize.pl and Cygwin pathnames [Tor]
+    + build bits:
+	+ autogen warnigns [Michel, Hanno]
+    + updated Debian, GoOoWindows, Novell, Ubuntu bits [Rene, Tor, Petr, Chris]
+    
 ooo-build-2.4.0.7
 
     + features:
