Move dejavu_liberation_making_fix.
* Version 2.4.0.9

* patches/src680/apply: move dejavu_liberation_making_fix.diff and
dejavu_liberation_packaging_fix.diff to the optional DejaVuFonts
section
* configure.in: revert the last KAMI's change; download the
DejaVu fonts and apply the DejaVuFonts patches only when
--with-dejavu-fonts option is used

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+ooo-build-2.4.0.9
+
+    + bug fixes:
+	+ linked graphics in SVG import [Thorsten]
+	+ more fixes of the datapilot drill-down stuff (i#88531) [Kohei]
+	+ default character set in CSV import dialog (bnc#376473) [Kohei]
+	+ better fix for xinerama & multiscreen (bnc#359955) [Radek, Thorsten]
+	+ better fix for "Animate attached Shape" checkbox (i#69364) [Thorsten]
+	+ allow to run the mediawiki extension (bnc#361061, i#85804) [Noel]
+	+ crash during printing (i#88818) [Thorsten]
+    + Win32:
+	+ multi-lingual installer fixes (Tor)
+	+ build with newer DejaVu fonts [Tor]
+    + build bits:
+	+ 'export verbose=t' enables verbosity during build as well (Thorsten)
+	+ make the DejaVu fonts 2.24 really optional [Petr, KAMI]
+	+ build dependency in oox [Petr]
+
 ooo-build-2.4.0.8
 
     + bug fixes:
