OOo:STABLE update)
* Version 2.4.0.3.7	(BS:OOo:STABLE update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+ooo-build-2.4.0.3.7
+
+	+ bug fixes:
+	    + FREQUENCY function regression (Kohei)
+	+ VBA bits:
+	    + crashes when opening two different dialog windows (Noel)
+	    + Application.Goto returns BASIC runtime error '1' (Noel)
+	    + Range.AutoOutline regression (Noel)
+	+ Win32 bits:
+	    + more components needed for the MSI patchability (Tor)
+	    + localization of NSIS wrapper (Tor)
+	+ build bits:
+	    + allow to use autoreconf (Petr)
+
 ooo-build-2.4.0.3.6
 
 	+ bug fixes:
