--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+ooo-build-2.4.0.11
+
+    + features:
+	+ support m14 [Rene]
+    + bug fixes:
+	+ improvements of the SVG import [Thorsten]
+	+ symbol font problem (bnc#383812) [Florian]
+	+ cutting cell and moving cursor (bnc#388770) [Jon]
+	+ deselected inplace OLE objects (i#89283, n#384506) [Thorsten]
+
 ooo-build-2.4.0.10
 
     + bug fixes:
