2008-05-19  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.12

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+ooo-build-2.4.0.12
+
+    + bug fixes:
+	+ registry store crasher [Radek]
+	+ documents with form fields crasher (bnc#390953) [Petr, Florian]
+	+ INDIRECT and Text as numbers calculation error (bnc#391330) [Kohei]
+	+ unable to mix fonts in a single cell (i#89598) [Kohei]
+	+ avoid unnecessary dns lookup (bnc#389257) [Kendy]
+	+ shrinked french localization (bnc#340679, i#89475) [Petr]
+	+ really disable the registration dialog (bnc#391477) [Kohei] 
+	+ bash completion for writer and master documents (bnc#257299) [Petr]
+    + updated Novell, OxygenOffice bits (Petr, Kalman)
+
 ooo-build-2.4.0.11
 
     + features:
