2008-05-22  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.13	(openSUSE-11.0-rc1)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-2.4.0.13
+
+    + bug fixes:
+	+ allow to change broken java configuration (i#83140, bnc#393719) [Petr]
+
 ooo-build-2.4.0.12
 
     + bug fixes:
