2008-05-26  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+ooo-build-2.4.1
+
+    + features:
+	+ support m15 [Petr, Rene]
+    + bug fixes:
+	+ registry store crasher [Radek]
+	+ loading and storing SMB hyperlinks (bnc#382718) [Kendy]
+	+ DOC import to show "hidden text" (i#53885) [Caolan, Petr]
+	+ easy moving of Draw/Impress text frames (bnc#384563) [Thorsten]
+	+ INDIRECT and Text as numbers calculation error (bnc#391330) [Kohei]
+	+ unable to mix fonts in a single cell (i#89598) [Kohei]
+	+ avoid unnecessary dns lookup (bnc#389257) [Kendy]
+	+ shrinked french localization (bnc#340679, i#89475) [Petr]
+	+ really disable the registration dialog (bnc#391477) [Kohei] 
+	+ documents with form fields crasher (bnc#390953) [Petr, Florian]
+	+ bash completion for writer and master documents (bnc#257299) [Petr]
+	+ allow to change broken java configuration (i#83140, bnc#393719) [Petr]
+    + VBA stuff:
+	+ Worksheet change event support (bnc#390082, bnc#391880)
+	+ PageSetup object and PrintArea method (bnc#390080)
+    + updated Novell, OxygenOffice bits (Petr, Kalman)
+
 ooo-build-2.4.0.11
 
     + features:
