2008-05-26  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1.1

* default tag ooh680-m16	(builds and seems to work for me)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+ooo-build-2.4.1.1
+
+    + features:
+	+ support m16 (OOo-2.4.1rc1) [Petr]
+    + bug fixes:
+	+ lots improvements in the SVG import [Thorsten]
+	+ really enable the fix for xinerama & multiscreen (bnc#359955) [Petr]
+    + build bits:
+	+ build with internal unixODBC on ppc64 (i#89955) [Hanno]
+
 ooo-build-2.4.1
 
     + features:
