2008-05-28  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1.2

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+ooo-build-2.4.1.2
+
+    + bug fixes:
+	+ cannot create new forms (i#90011)
+	+ Find and Replace with formatting inserts unwanted "x" (i#87092)
+	+ crash when calling the mono test case (i#90076) [Petr, Kendy]
+	+ hyperlinks with numeric slide names (n#355674) [Radek]
+	+ more improvements in the SVG import [Thorsten]
+	+ allow to insert SVGs into documents [Thorsten]
+	+ crash in EMF+ renderer (Thorsten)
+	+ better performance for non EMF+ metafiles (Radek)
+    + updated OxygenOffice bits (KAMI)
+
 ooo-build-2.4.1.1
 
     + features:
