--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+ooo-build-2.4.1.3
+
+    + features:
+	+ support m17 (OOo-2.4.1rc2) [Rene]
+    + updated OxygenOffice bits (KAMI)
+
 ooo-build-2.4.1.2
 
     + bug fixes:
