2008-06-04  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1.4	(Update for SLED10)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+ooo-build-2.4.1.4
+
+    + bug fixes:
+	+ export to MS Word Doc crasher (bnc#391197) [Fridrich]
+	+ hidden slides in custom slideshow (bnc#355638, i#90145) [Thorsten]
+	+ save background image of slide master (i#87071) [Caolan, Chris]
+	+ unopkg --share when running OOo (i#86080) [Caolan, Chris]
+    + updated Novell, OxygenOffice bits (Petr, KAMI)
+
 ooo-build-2.4.1.3
 
     + features:
