2008-06-04  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1.5	(Update for SLED10)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+ooo-build-2.4.1.5
+
+    + bug fixes:
+	+ last unopkg-related change and older mktemp (i#86080) [Petr, Caolan]
+    + updated Novell, GO-OO bits [Florian]
+
 ooo-build-2.4.1.4
 
     + bug fixes:
