2008-06-05  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.0.14	(openSUSE-11.0-GMC)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+ooo-build-2.4.0.14
+
+    + bug fixes:
+	+ export to MS Word Doc crasher (bnc#391197) [Fridrich]
+	+ save background image of slide master (i#87071) [Caolan, Chris]
+    + updated OxygenOffice bits (KAMI)
+
 ooo-build-2.4.0.13
 
     + bug fixes:
