2008-06-19  Jan Holesovsky  <kendy@suse.cz>
* Version 2.4.1.6

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+ooo-build-2.4.1.6
+
+    + bug fixes:
+	+ handle multipart object records (bnc#385338) [Radek]
+	+ center content when toggling merge cells (n#398243, lp#236378) [Kohei]
+	+ checks for file locking and opengl on Ubuntu (lp#232160) [Chris]
+	+ backported a set of cairo font rendering fixes (CWS cmcfixes46) [Caolan, Thorsten]
+	+ backported 64bit mozilla plugin fixes, word doc opening (CWS cmcfixes47) [Caolan, Rene]
+	+ fixed crash in svg importer [Thorsten]
+	+ fixed crash in RandR (bnc#398244, i#90809) [Thorsten]
+	+ fixed doc protection problem (bnc#400884) [Florian]
+    + build bits:
+	+ Go-oo bits update [Fridrich]
+	+ part of emf+ splitted out of the EMF+ section (bnc#361534) [Radek]
+	+ fix bashism [Rene]
+	+ OxygenOffice bits update [Kami]
+
 ooo-build-2.4.1.5
 
     + bug fixes:
