2008-06-24  Petr Mladek  <pmladek@suse.cz>
* Version 2.4.1.7

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+ooo-build-2.4.1.7
+
+    + do not lost pictures added by drag and drop (bnc#348149) [Thorsten]
+
 ooo-build-2.4.1.6
 
     + bug fixes:
