2008-07-24  Petr Mladek <pmladek@suse.cz>
* Version 2.4.1.8

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,31 @@
+ooo-build-2.4.1.8
+
+    + bug fixes:
+	+ filter detection and nested transformations in SVG import [Thorsten]
+	+ column/row breaks and fit to x pages (bnc#404232, bnc#404563) [Kohei]
+	+ cells with mixed font content (bnc#409448) [Kohei]
+	+ incorrect pagination in Excel import (bnc#404232) [Kohei]
+	+ Landscape/Portrait not managed correctly (bnc#405071) [Fridrich]
+	+ better round trips of the hyperlinks to files (bnc#405712) [Kendy]
+	+ hyperlinks without scheme (bnc#376389, i#91105) [Kendy]
+	+ set timeout for WebDAV locking (bnc#403724) [Kendy]
+	+ rotated margin text (bnc#404221) [Florian]
+	+ table layout fix (bnc#367341) [Florian]
+    + VBA bits:
+	+ crasher when clicking on "Append Row" button (bnc#406675) [Fong]
+	+ support ListBox.removeItem (bnc#405306) [Jianhua]
+	+ support Pagesetup.Orientation (bnc#405310) [Fong]
+	+ support range.find (bnc#405304) [Jianhua]
+	+ add SpinButton (bnc#405308) [Jianhua]
+	+ osx button names not imported (bnc#359933) [Noel]
+	+ fail to return the main menu (bnc#408263) [Fong]
+    + Win32 bits:
+	+ fixes for msvc8 [Thorsten]
+	+ vista psdk support [Thorsten]
+    + build bits:
+	+ fpicker dependency [Thorsten]
+    + updated Debian, OxygenOffice, Ubuntu bits [Rene, Kalman, Chris]
+
 ooo-build-2.4.1.7
 
     + do not lost pictures added by drag and drop (bnc#348149) [Thorsten]
