2008-08-14  Petr Mladek <pmladek@suse.cz>
* Version 2.4.1.9	(Another update for SLED10)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+ooo-build-2.4.1.9
+
+    + bug fixes:
+	+ rotated margin text regression (bnc#404221) [Florian]
+	+ leaving "Format code" blank crasher (bnc#416837) [Kohei]
+	+ chart subtitle export to XLS (bnc#411855, i#92357) [Kohei]
+    + VBA bits:
+	+ broken Sort() function (bnc#410294) [Noel]
+	+ rather disabled range.find support again (bnc#405304) [Petr]
+    + Win32 bits:
+	+ prefer msvs2003 again [Thorsten]
+	+ MSI patchability improvements [Tor]
+	+ do not crash when using as GW editor (bnc#353143, i#92372) [Tor]
+	+ compilation of fail to return the main menu fix (bnc#408263) [Fong]
+
 ooo-build-2.4.1.8
 
     + bug fixes:
