--- a/NEWS
+++ b/NEWS
@@ -3,20 +3,24 @@ ooo-build-3.0.0.3.1:
     +features:
 	+ support ooo300-m5 (3.0rc1) [Rene, Petr]
 	+ enabled again WW-like input-fields and checkboxes (Florian)
-    + disabled problematic stuff:
+    + problematic stuff disabled:
 	+ move cell notes with anchored cells (i#59745, bnc#n#422677) [Kohei]
 	+ skip data in hidden cells when rendering charts (bnc#404190,
 	  i#81209) [Kohei]
 	+ external range names [Kohei]
 	+ layout stuff [Jan]
     + bug fixes:
-	+ annoying pdf permission checks [Thorsten]
+	+ annoying PDF permission checks [Thorsten]
 	+ wrong read-out of fontconfig flags (bnc#407958) [Thorsten]
+    + VBA bits:
+	+ more on the user forms and event handling [Noel]
     + Win32 bits:
 	+ lots installer and patchability fixes [Tor]
     + build bits:
-	+ updated scsover to the snapshot 2008-09-08 [Kohei]
+	+ updated scsolver to the snapshot 2008-09-08 [Kohei]
 	+ temporary globally disabled report builder [Petr]
+	+ allow to install dictionaries again [Petr]
+    + updated Novell bits [Petr]
 
 ooo-build-3.0.0.3:
 
