2008-09-16  Petr Mladek <pmladek@suse.cz>
* Version 2.4.1.10

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+ooo-build-2.4.1.10:
+
+    + bug fixes:
+	+ infinite loop when running Calc remotely (bnc#426403) [Kohei]
+	+ Korean localization fix [KAMI]
+    + build bits:
+	+ build rhino with openjdk-6 [Chris]
+
 ooo-build-2.4.1.9
 
     + bug fixes:
