2008-09-22  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.3.2

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,35 @@
+ooo-build-3.0.0.3.2:
+
+    +features:
+	+ support ooo300-m7 (3.0rc1) [Rene]
+    + bug fixes:
+	+ various fixes of the 3D transitions [Radek]
+	+ returning from presenter view crasher (bnc#425072, i#94007) [Thorsten]
+	+ nasty X errors on multi-head setups (i#93986) [Thorsten]
+	+ check for Cairo canvas [Thorsten]
+	+ Excel 95 import filter crasher (bnc#427434) [Kohei]
+	+ chart's data range re-calculation (bnc#425617) [Kohei]
+	+ DataPilot inserts an extra empty row (bnc##252037) [Kohei]
+	+ multiline formula reference and ODF export optimization [Kohei]
+	+ GenericName to the upstream desktop files [Rene]
+	+ accelerators for OK/Cancel buttons [Kohei]
+	+ field stuff cleanup (bnc#426348) [Florian]
+	+ unxsplash bitmap reading [Kendy]
+	+ disable problematic GNOME fpicker optimization (bnc#427336) [Kendy]
+    + Win32 bits:
+	+ various installer fixes [Tor]
+	+ sheet protection crasher on Vista [Kohei]
+    + build bits:
+	+ updated extras to version 3; new autotext stuff [KAMI]
+	+ disable all extensions by default; are in extra source tarball [Rene]
+	+ extra GSI files transformed into the .po files [KAMI]
+	+ bogus reportdesign build dependencies [Rene]
+	+ new --with-sun-templates option [KAMI]
+	+ build with OpenJDK for PPC [Rene]
+	+ mono package file list [Petr]
+	+ build without java [Rene]
+    + updated Gentoo, OxygenOffice bits [Andreas, KAMI]
+
 ooo-build-3.0.0.3.1:
 
     +features:
