2008-10-01  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.3.3

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,32 @@ ooo-build-3.0.0.3.3:
 
     +features:
 	+ support ooo300-m8 (3.0rc3) [Rene]
-    
+    + bug fixes:
+	+ migrate user settings from ~/.ooo-2.0 to ~/.ooo3 (bnc#421070) [Kendy]
+	+ multiline formula reference and ODF export optimization fix [William]
+	+ COUNT and COUNTA when range contains errors (bnc#430655) [Kohei]
+	+ new -no-oosplash option to avoid early quit (deb#396276) [Rene]
+	+ Writer doc margin text rotates in Word (bnc#404221) [Florian]
+	+ KDE and GNOME filepicker to work again (bnc#427336) [Kendy]
+	+ DataPilot and filtered ranges regression (i#94281) [Kohei]
+	+ accelerators for OK/Cancel buttons only on Linux [Kohei]
+	+ export of the radio button group-name attributes [Jon]
+	+ lookup for mozilla certificates optimization [Rene]
+	+ Greek localization crasher (i#94317) [Rene]
+	+ continuous numbering in Impress [Thorsten]
+	+ problem with getAbsoluteFileURL [Thorsten]
+	+ updated Hungarian translation [Andreas T]
+    + Win32 bits:
+	+ allow to integrate extensions [Tor]
+	+ tooltips cleanup [Tor]
+    + build bits:
+	+ updated scsolver to the snapshot 2008-09-30 (bnc#429659) [Kohei]
+	+ new --with-extension-integration configure option [KAMI]
+	+ build without java [Rene]
+	+ build on MAC [Thorsten]
+	+ GO-OO build [Fridrich]
+    + updated Gentoo, Novell, OxygenOffice, Ubuntu, bits [Hanno, Tor, KAMI,
+      Chris]
 
 ooo-build-3.0.0.3.2:
 
