2008-10-06  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.3.4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+ooo-build-3.0.0.3.4:
+
+    +features:
+	+ support ooo300-m9 (3.0rc4) [Rene]
+    + fixes:
+	+ MS Doc import crasher (bnc#430149) [Fridrich]
+	+ slide transitions crashers (bnc#430449) [Radek]
+	+ oobase to work with JRE 1.4.2 (bnc#431360) [Petr]
+    + VBA bits:
+	+ some crashers (bnc#431613, bnc#431657) [Noel]
+    + Win32 build:
+	+ more on the tooltips cleanup [Tor]
+    + build bits:
+	+ more on the build on MAC [Thorsten]
+    + updated Debian, Gentoo, Ubuntu bits [Rene, Andreas]
+
 ooo-build-3.0.0.3.3:
 
     +features:
