2008-10-15  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.3.5		(SLED10-SP2 maintenance udpate)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+ooo-build-3.0.0.3.5:
+
+    + bug fixes:
+	+ Writer filed stuff fixes (bnc#400884) [Patrick, Florian, Petr]
+	+ GNOME filepicker to work again (bnc#434778) [Petr]
+	+ PYUNO to work better [Daniel, Rene]
+    + VBA bits:
+	+ font properties crasher (bnc#433292) [Noel]
+    + Win32 bits:
+	+ allow to enable the OpenOffice.org dialogs [Tor]
+    + build bits:
+	+ updated scsolver to the snapshot 2008-10-07 [Kohei]
+	+ executable rights for installed scripts [Thorsten]
+	+ cleaned up some patches [Fridrich, KAMI, Petr]
+	+ better support for system java bits [Rene]
+	+ fix smoketest with -no-oosplash [Rene]
+	+ more on extensions [KAMI, Hanno]
+	+ support binsuffix again [Chris]
+	+ more on MAC build [Thorsten]
+    + updated Frugalware, Gentoo, OxygenOffice bits [Miklos, Andreas, KAMI]
+    + experimental:
+	+ more on the KDE4 support [Bernhard]
+
 ooo-build-3.0.0.3.4:
 
     +features:
