Add --with-unstable-libwpd, --with-unstable-libwps,  --with-unstable-libwpg configure options to make the download, unpack, apply optional
* configure.in, download.in, bin/setup.in, bin/unpack:
* bin/applyflags: add --with-unstable-libwpd, --with-unstable-libwps, 
--with-unstable-libwpg configure options to make the download,
unpack, apply optional

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+ooo-build-3.0.0.3.6:
+
+    + features:
+	+ initial support for FSF.hu distribution [KAMI]
+    + bug fixes:
+	+ handling of paint fragments [Thorsten]
+	+ use kde-open for mailto: URLs [Rene]
+	+ can't change text size in merged cells (bnc#437137) [Kohei]
+    + VBA bits:
+	+ commandbar submenu fix (bnc#434214, bnc#437157) [Fong]
+#	+ locale dependant R1C1 formula conversion (bnc#422145) [Kohei]
+    + Win32 bits:
+	+ extra dictionaries as an extension [Tor]
+    + localizations:
+	+ more Jungarian fixes [Andras]
+    + build bits:
+	+ updated scsolver to the snapshot 2008-10-30
+	+ support berkdb 4.7 [Andreas]
+	+ really allow to disable latex filters (i#93520) [Rene]
+    + updated Gentoo, OxygenOffice, Ubuntu bits (Andreas, KAMI, Chris)
+
 ooo-build-3.0.0.3.5:
 
     + bug fixes:
