2008-12-02  Petr Mladek <pmladek@suse.cz>
* Version 3.0.0.3.6

2008-12-02  Petr Mladek <pmladek@suse.cz>

* configure.in, bin/setup.in, bin/applyflags, patches/dev300/apply:
I was too fast; It is better to use --with-unstable-wp instead of
--with-unstable-libwpd, --with-unstable-libwps,
--with-unstable-libwpg

--- a/NEWS
+++ b/NEWS
@@ -1,23 +1,45 @@
 ooo-build-3.0.0.3.6:
 
     + features:
-	+ initial support for FSF.hu distribution [KAMI]
+	+ initial support for FSF.hu distribution [KAMI, Andras]
     + bug fixes:
-	+ handling of paint fragments [Thorsten]
-	+ use kde-open for mailto: URLs [Rene]
+	+ COUNTA and string literal (bnc#446622) [Kohei]
+	+ mark document as modified when password changed [Kohei]
+	+ non-numeric letter sequence detection (bnc#439441) [Kohei]
 	+ can't change text size in merged cells (bnc#437137) [Kohei]
+	+ disabled problematic TOC import fix (bnc#438525, bnc#404254) [Petr]
+	+ saving files on Novell teaming via WebDAV (bnc#440514) [Kendy, Petr]
+	+ allow to send doc via GroupWise (bnc#418407, i#95873) [Tor, Petr]
+	+ can't import userforms from Word (bnc#447015) [Noel]
+	+ disable debuginfo from pythonloader (i#90653) [Rene]
+	+ user path in scripting framework [Rene]
+	+ use kde-open for mailto URLs [Rene]
+	+ paint fragments handling [Thorsten]
     + VBA bits:
+	+ XLS import crasher (bnc#447560) [Noel]
+	+ Range.Select and window focus (bnc#444156) [Noel]
 	+ commandbar submenu fix (bnc#434214, bnc#437157) [Fong]
+	+ Worksheet_Activate before the sheet is changed (bnc#444145) [Noel]
 #	+ locale dependant R1C1 formula conversion (bnc#422145) [Kohei]
     + Win32 bits:
+	+ fix MSI patchability [Tor]
+	+ build with older boost [Thorsten]
 	+ extra dictionaries as an extension [Tor]
+	+ corrupted colours in CMYK or YCCK JPEGs (bnc#444106) [Tor]
     + localizations:
-	+ more Jungarian fixes [Andras]
+	+ more Hungarian fixes (i#88218) [Andras]
+	+ update localizations from openSUSE community [Petr]
     + build bits:
 	+ updated scsolver to the snapshot 2008-10-30
-	+ support berkdb 4.7 [Andreas]
+	+ updated internal PostgreSQL driver to 0.7.6 [Rene]
+	+ apache-common module building in non-UTF-8 locale [KAMI]
+	+ put kdefilepicker into the kde subpackage (bnc#439322) [Petr]
 	+ really allow to disable latex filters (i#93520) [Rene]
-    + updated Gentoo, OxygenOffice, Ubuntu bits (Andreas, KAMI, Chris)
+	+ allow to build unstable libwp* stuff [Fridrich, Petr]
+	+ support BerkleyDB 4.7 [Andreas]
+	+ mono stuff build [Jo]
+    + updated Gentoo, GO-OO, Mandriva, OxygenOffice, Ubuntu bits (Andreas,
+      Fridrich, Rafael, KAMI, Chris, Mathias)
 
 ooo-build-3.0.0.3.5:
 
