--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+ooo-build-3.0.0.99.1:
+
+    +features:
+	+ support ooo300-m13 (3.0.1beta) [Rene, Petr]
+    + 
+
 ooo-build-3.0.0.3.5:
 
     + bug fixes:
