Set -Xbootclasspath also for the second javac call in scripting; fixes build with ooo300-m13 on openSUSE-11.
* patches/dev300/buildfix-openjdk-6-no-rhino.diff: set
-Xbootclasspath also for the second javac call in scripting;
fixes build with ooo300-m13 on openSUSE-11.1
* patches/dev300/apply: move buildfix-openjdk-6-no-rhino.diff
to a common section

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,57 @@ ooo-build-3.0.0.99.1:
 
     +features:
 	+ support ooo300-m13 (3.0.1beta) [Rene, Petr]
-    + 
+	+ initial support for FSF.hu distribution [KAMI, Andras]
+    + bug fixes:
+	+ COUNTA and string literal (bnc#446622) [Kohei]
+	+ mark document as modified when password changed [Kohei]
+	+ non-numeric letter sequence detection (bnc#439441) [Kohei]
+	+ can't change text size in merged cells (bnc#437137) [Kohei]
+	+ disabled problematic TOC import fix (bnc#438525, bnc#404254) [Petr]
+	+ saving files on Novell teaming via WebDAV (bnc#440514) [Kendy, Petr]
+	+ allow to send doc via GroupWise (bnc#418407, i#95873) [Tor, Petr]
+	+ wrong text color and alignment in PPT import (bnc#443127) [Thorsten]
+	+ can't import userforms from Word (bnc#447015) [Noel]
+	+ disable debuginfo from pythonloader (i#90653) [Rene]
+	+ "Identify Categories" in data pilot (bnc#447182, i#96171) [Kohei]
+	+ compilation of the mono sample (bnc#444353) [Radek]
+	+ RIGH JOIN selection description (bnc#431031, i#97026) [Petr]
+	+ adds version info to cli_uno_bridge.dll assembly (bnc#361463) [Radek]
+	+ DirectX canvas when the device is lost (bnc#445628) [Thorsten]
+	+ EMF+ import fixes [Thorsten, Radek]
+	+ pyuno fixes [Rene, Petr]
+	+ blinking text in slideshow [Thorsten]
+	+ SMTP mailemrge dialog fix [Rene]
+	+ user path in scripting framework [Rene]
+	+ use kde-open for mailto URLs [Rene]
+	+ paint fragments handling [Thorsten]
+    + VBA bits:
+	+ hyperlink button (bnc#446637) [Noel]
+	+ XLS import crasher (bnc#447560) [Noel]
+	+ Range.Select and window focus (bnc#444156) [Noel]
+	+ commandbar submenu fix (bnc#434214, bnc#437157) [Fong]
+	+ Worksheet_Activate before the sheet is changed (bnc#444145) [Noel]
+    + Win32 bits:
+	+ fix MSI patchability [Tor]
+	+ build with older boost [Thorsten]
+	+ extra dictionaries as an extension [Tor]
+	+ corrupted colours in CMYK or YCCK JPEGs (bnc#444106) [Tor]
+    + localizations:
+	+ more Hungarian fixes (i#88218) [Andras]
+	+ update localizations from openSUSE community [Petr]
+    + build bits:
+	+ updated scsolver to the snapshot 2008-10-30
+	+ updated internal PostgreSQL driver to 0.7.6 [Rene]
+	+ apache-common module building in non-UTF-8 locale [KAMI]
+	+ put kdefilepicker into the kde subpackage (bnc#439322) [Petr]
+	+ really allow to disable latex filters (i#93520) [Rene]
+	+ allow to build unstable libwp* stuff [Fridrich, Petr]
+	+ build with IBM Java on PPC (bnc#449711) [Petr]
+	+ support BerkleyDB 4.7 [Andreas]
+	+ OOo SDK name (i#97041) [Rene]
+	+ mono stuff build [Jo]
+    + updated Gentoo, GO-OO, Mandriva, OxygenOffice, Ubuntu bits (Andreas,
+      Fridrich, Rafael, KAMI, Chris, Mathias)
 
 ooo-build-3.0.0.3.5:
 
