Default to ooo300-m13 (builds for me)
* Version 3.0.0.99.1	(3.0.1-beta1)

* configure.in: default to ooo300-m13 (builds for me)

--- a/NEWS
+++ b/NEWS
@@ -8,24 +8,24 @@ ooo-build-3.0.0.99.1:
 	+ mark document as modified when password changed [Kohei]
 	+ non-numeric letter sequence detection (bnc#439441) [Kohei]
 	+ can't change text size in merged cells (bnc#437137) [Kohei]
+	+ "Identify Categories" in data pilot (bnc#447182, i#96171) [Kohei]
 	+ disabled problematic TOC import fix (bnc#438525, bnc#404254) [Petr]
 	+ saving files on Novell teaming via WebDAV (bnc#440514) [Kendy, Petr]
-	+ allow to send doc via GroupWise (bnc#418407, i#95873) [Tor, Petr]
+	+ adds version info to cli_uno_bridge.dll assembly (bnc#361463) [Radek]
 	+ wrong text color and alignment in PPT import (bnc#443127) [Thorsten]
+	+ allow to send doc via GroupWise (bnc#418407, i#95873) [Tor, Petr]
+	+ DirectX canvas when the device is lost (bnc#445628) [Thorsten]
+	+ RIGHT JOIN selection description (bnc#431031, i#97026) [Petr]
 	+ can't import userforms from Word (bnc#447015) [Noel]
 	+ disable debuginfo from pythonloader (i#90653) [Rene]
-	+ "Identify Categories" in data pilot (bnc#447182, i#96171) [Kohei]
 	+ compilation of the mono sample (bnc#444353) [Radek]
-	+ RIGH JOIN selection description (bnc#431031, i#97026) [Petr]
-	+ adds version info to cli_uno_bridge.dll assembly (bnc#361463) [Radek]
-	+ DirectX canvas when the device is lost (bnc#445628) [Thorsten]
-	+ EMF+ import fixes [Thorsten, Radek]
-	+ pyuno fixes [Rene, Petr]
-	+ blinking text in slideshow [Thorsten]
-	+ SMTP mailemrge dialog fix [Rene]
 	+ user path in scripting framework [Rene]
+	+ blinking text in slideshow [Thorsten]
 	+ use kde-open for mailto URLs [Rene]
+	+ EMF+ import fixes [Thorsten, Radek]
 	+ paint fragments handling [Thorsten]
+	+ SMTP mailmerge dialog fix [Rene]
+	+ pyuno fixes [Rene, Petr]
     + VBA bits:
 	+ hyperlink button (bnc#446637) [Noel]
 	+ XLS import crasher (bnc#447560) [Noel]
