Port for ooo300-m14 and enable again
* patches/dev300/webdav-locking-from-ooo-build-2-4-1.diff:
* ooo-build/patches/dev300/apply: port for ooo300-m14 and enable again

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+ooo-build-3.0.0.99.2:
+
+    +features:
+	+ support ooo300-m14 (3.0.1rc1) [Rene, Petr, Tor]
+	+ WordPro import filter [Fong]
+    + speed up:
+	+ symlinks in registries [Michael]
+    + bug fixes:
+	+ bin upstream specific updater code [Kohei]
+	+ incorrect scaling of axes (i#95714) [Kohei]
+	+ incorrect scaling of axes (i#95714) [Kohei]
+	+ pivot cache field import (bnc#433658) [Kohei]
+	+ store ranges using CONV_OOO (bnc#463305) [Kohei]
+	+ cell change records export to Excel (bnc#416045) [Kohei]
+	+ selected and unselected tab colors (bnc#396386, i#94452) [Kohei]
+	+ outline numbering in master document (i#96092, bnc#445536) [Amelia]
+	+ truncated text on buttons on sslwarndlg (i#97329) [Andras]
+	+ PDF export from page preview crasher (i#96167) [Chris]
+	+ fit list to size popup (i#94086) [Thorsten]
+    + VBA bits:
+	+ XLS import crasher (bnc#458985) [Noel]
+    + Win32 bits:
+	+ drop support for Win9x [Tor]
+    + build bits:
+	+ build with boost-1.37 [Bernhard]
+	+ GIO vs. GNOME VFS (i#95713) [Petr]
+	+ prebuilt mono dlls update [Petr]
+    + updated OxygenOffice bits [KAMI]
+
 ooo-build-3.0.0.99.1:
 
     +features:
