2008-01-08  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.11	(SLED11-rc2)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+ooo-build-3.0.0.11:
+
+    * bug fixes:
+	+ more on the layout dialogs [Jan]
+	+ x-axis with numeric or dates (bnc#463199) [Kohei]
+	+ store ranges using CONV_OOO (bnc#463305, bnc#461263) [Kohei]
+	+ outline numbering in master document (i#96092, bnc#445536) [Amelia]
+	+ set python paths (bnc#440090, deb#501028, i#90701) [Rene, Petr]
+	+ DirectX canvas when the device is lost (bnc#445628) [Thorsten]
+	+ RIGHT JOIN selection description (bnc#431031, i#97026) [Petr]
+	+ no latex filter without writer2latex (i#93520) [Rene, Petr]
+	+ wordwrap problem with 2.x documents (i#93996) [Thorsten]
+	+ preference over gnumeric (bnc#463510) [Petr]
+	+ fit list to size popup (i#94086) [Thorsten]
+	+ broken autorecovery (i#92968) [Petr]
+    + Win32 bits:
+	+ drop support for Win9x [Tor]
+    + VBA bits:
+	+ XLS import crasher (bnc#447560, bnc#458985) [Noel]
+	+ hyperlink button (bnc#446637) [Noel]
+    + build bits:
+	+ fix --enable-layout-experimental option to work [Jan]
+
 ooo-build-3.0.0.10:
 
     * bug fixes:
