2008-01-16  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.1.0	(3.0.1-rc1)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+ooo-build-3.0.1.0:
+
+    +features:
+	+ support ooo300-m15 (3.0.1rc2) [Rene]
+	+ "skip hidden cells" functionality (bnc#404190, i#81209) [Kohei]
+    + bug fixes:
+	+ DATEVALUE fractional part strip (bnc#432877, i#94765) [Kohei]
+	+ charts of mixed types rendering (n#437322, i#95934) [Kohei]
+	+ hidden items in drill-down sheets (i#93918, i#93998) [Kohei]
+	+ temp files handling (bnc#464568, bnc#464996) [Kendy]
+	+ file name in the mail subject (bnc#459176) [Tor]
+	+ drawArc PDF output (i#97399) [Thorsten]
+    + VBA bits:
+	+ ColorIndex function.runtime error (bnc#459479) [Fong]
+    + localizations:
+	+ localizations from openSUSE community update [Petr]
+	+ some Hungarian localization fixes [Andras]
+    + build bits:
+	+ various built problems [Andreas]
+    + updated Gentoo, Ubuntu bits [Andreas, Chris]
+    + Experimental:
+	+ external range names (i#3740, i#4385, bnc#355685) [Kohei]
+	+ custom names in data pilot tables (bnc#338014, i#22029) [Kohei]
+
 ooo-build-3.0.0.99.2:
 
     +features:
