More fixes to hu translation
* src/sdf/hu-fix3.sdf,
* po/ooo-build-hu.po, 
* po/ooo-build-hu.sdf:  more fixes to hu translation

--- a/po/ooo-build-hu.po
+++ b/po/ooo-build-hu.po
@@ -792,12 +792,12 @@ msgstr "Az ODMA DMS párbeszédablakok megjelenítése"
 #: svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_CHAR.menuitem.text
 msgctxt "svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_CHAR.menuitem.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_LINE.menuitem.text
 msgctxt "svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_LINE.menuitem.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: svx/source/gallery2/galtheme.src#RID_GALLERYSTR_THEME_ANIMALS.string.text
 msgid "Animals"
@@ -1219,13 +1219,13 @@ msgstr "Időjárás"
 msgctxt ""
 "svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.10.itemlist.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.11.itemlist.text
 msgctxt ""
 "svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.11.itemlist.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: svx/source/tbxctrls/tbcontrl.src#RID_SVX_ZOOM_OPTIMAL.string.text
 msgid "~Optimal"
@@ -1246,12 +1246,12 @@ msgstr "Karakter egység engedélyezése"
 #: sw/source/ui/config/optload.src#STR_ARR_METRIC.10.itemlist.text
 msgctxt "sw/source/ui/config/optload.src#STR_ARR_METRIC.10.itemlist.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: sw/source/ui/config/optload.src#STR_ARR_METRIC.11.itemlist.text
 msgctxt "sw/source/ui/config/optload.src#STR_ARR_METRIC.11.itemlist.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: sw/source/ui/misc/pggrid.src#TP_TEXTGRID_PAGE.FT_CHARRANGE.fixedtext.text
 msgid "( 1 - 45 )"
