2009-01-22  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.12	(SLED11-rc3)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,24 @@
+ooo-build-3.0.0.12:
+
+    + bug fix:
+	+ accelerators for the en-US locale (bnc#463733, i#97088) [Kendy]
+	+ recognize a directory as a folder with neon (i#98288) [Caolan]
+	+ fix java-set-classpath script (bnc#465250) [Petr]
+	+ add Draft.jpg to the 'Backgrounds' gallery [Petr]
+	+ really used some extra icons (bnc#458929) [Petr]
+	+ file name in the mail subject (bnc#459176) [Tor]
+	+ SXC import crasher (bnc#467536) [Petr]
+	+ enable bash completion again [Petr]
+	+ category value tooltip [Kohei]
+    + localization:
+	+ update ooo-build localization from openSUSE community [Petr]
+	+ enable SuSE l10n of ooo-extension-manager.desktop (bnc#447083) [Petr]
+    + build bits:
+	+ printf arguments cleanup [Rafael]
+
 ooo-build-3.0.0.11:
 
-    * bug fixes:
+    + bug fixes:
 	+ more on the layout dialogs [Jan]
 	+ x-axis with numeric or dates (bnc#463199) [Kohei]
 	+ store ranges using CONV_OOO (bnc#463305, bnc#461263) [Kohei]
