--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-3.0.0.13:
+
+    + localization:
+	+ update ooo-build localization from openSUSE community [Petr]
+
 ooo-build-3.0.0.12:
 
     + bug fix:
