--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+ooo-build-3.0.1.1:
+
+    + bug fixes:
+	+ do not show the Err:529 internal error number (bnc#440808) [Kohei]
+	+ accelerators for the en-US locale (bnc#463733, i#97088) [Kendy]
+	+ recognize a directory as a folder with neon (i#98288) [Caolan]
+	+ shrinked strings in some dialogs (i##98164) [Andras]
+	+ fix java-set-classpath script (bnc#465250) [Petr]
+	+ file name in the mail subject (bnc#459176) [Tor]
+	+ layout dialogs localization (bnc#466065) [Jan]
+	+ SXC import crasher (bnc#467536) [Petr]
+    + l10n:
+	+ some Hungarian localization fixes [Andras]
+    + build bits:
+	+ extras and extensions packaging enhancemetns [KAMI, Tor]
+	+ printf arguments cleanup [Rafael]
+    + updated OxygenOffice bits [KAMI]
+    + Experimental:
+	+ non-cached cells treating (bnc#355685) [Kohei]
+
 ooo-build-3.0.1.0:
 
     +features:
